# resolvent

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  ecosystem.config.js  setup.sh
.github/workflows/: docker.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/api/: analyses.py  analyze.py  analyze_latex.py  auth.py  chat.py
backend/core/: anthropic_client.py  color_registry.py  database.py  equation_extractor.py  visualization_engine.py
backend/tests/: conftest.py  test_analyses.py  test_auth.py  test_database.py  test_extractor.py  test_visualization.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientApp.tsx  TopBar.tsx
frontend/src/components/analysis/: AnalysisResult.tsx  AnimControls.tsx  ChatSection.tsx  DerivationSteps.tsx  PartCard.tsx
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/upload/: ImageCropper.tsx  UploadZone.tsx
frontend/src/components/viz/: VizCanvas.tsx
frontend/src/hooks/: useAnimation.ts  useCamera3D.ts  useMathJax.ts
frontend/src/lib/: api.ts  canvas-registry.ts  expr-compiler.test.ts  expr-compiler.ts  math-ext.test.ts  math-ext.ts  proxy.ts
frontend/src/lib/renderers/: index.ts  shared.ts  types.ts
frontend/src/store/: index.test.ts  index.ts
frontend/src/types/: analysis.ts
(+19 files in other folders)
